nullaway_error_33890881-F216-4917-9860-59C18238A6E4.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-jms/src/main/java/org/springframework/jms/connection/ConnectionFactoryUtils.java:327: error: [NullAway] passing @Nullable parameter 'con' where @NonNull is required
			session = resourceFactory.createSession(con);
			                                        ^
    (see http://t.uber.com/nullaway )
